--- a/javafaker/pom.xml
+++ b/javafaker/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>dbCreation</artifactId>
+    <artifactId>javafaker</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>dbCreation</name>
     <description>dbCreation</description>
@@ -27,7 +27,7 @@
         <url/>
     </scm>
     <properties>
-        <java.version>23</java.version>
+        <java.version>22</java.version>
     </properties>
     <dependencies>
         <dependency>
